{
    "name": "InputKeyMouse",
    "maps": [
        {
            "name": "Player",
            "id": "6bf7fcac-46d0-4320-9692-0a76b11f1f1a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "cea3fd64-0375-4036-a9c7-f16c71e8a4da",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "03061f1f-f80d-44a5-a7a0-b6cdd9686339",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "79f2bcce-1731-470c-b402-56a16e2bf388",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "138d0a7d-de78-4b81-8e5f-3b4af446f07b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "55d7dd7d-cd02-496b-9861-ecaed4f732f2",
                    "path": "<Keyboard>/leftAlt",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a920428c-bc8b-49ef-bec7-1ed924d60fbe",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f3d06f87-3e25-4d1a-8768-9a7acf6dc7ec",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "a6c28e03-a3fc-43db-a144-a3c64a680e22",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "40082fc1-749e-49ad-ae7f-efc040fc5fcb",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7bc88173-7735-4b85-8d40-9c3440e4a0b8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "c979b464-daf0-49e0-add5-8f4c5d29e868",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "17276756-b5d1-4233-8e3e-0f2d5eb9ad66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TestClick",
                    "type": "PassThrough",
                    "id": "64a0994d-d4f9-4dab-af61-a0b4c5c39d16",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ca353315-0a81-4d86-ad20-0d28ae5fefc1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22daf798-14f0-42ee-8f59-ef2d491ee1be",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "KeyBorad",
            "id": "2fe57fd0-94ec-48be-a1c3-751133faf037",
            "actions": [
                {
                    "name": "InvenKey",
                    "type": "Button",
                    "id": "bec4b0ba-dcbe-4278-9ea3-1d44416c437c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OptionKey",
                    "type": "Button",
                    "id": "0b8941a4-b399-459d-a370-d54702cd6e08",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StateKey",
                    "type": "Button",
                    "id": "f540ad41-ab20-4a1c-99d7-6963c56833e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "System",
                    "type": "Button",
                    "id": "98ab586a-9e65-4ffd-9b8c-a5edf7e362b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "62f3cc10-e6f8-4bca-ada9-2309ad2d6acd",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InvenKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f13777f-5336-4a94-8b68-f0795dbb25f6",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OptionKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0af9c2cc-a9ad-48c3-ac3e-17355e69a8f8",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StateKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e9dca12-5267-480e-a988-2fd5b3a6caf2",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "System",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Test",
            "id": "459b7981-17d4-4cdb-b460-aa8727c82cbd",
            "actions": [
                {
                    "name": "Test1",
                    "type": "Button",
                    "id": "e2a7b691-1e40-4aa5-99da-4c03dd54e93f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test2",
                    "type": "Button",
                    "id": "9df0db3a-63ec-43f9-9e68-0d988353c2a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test3",
                    "type": "Button",
                    "id": "1e0289bf-241d-41cd-9176-fd0a2f06acf0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test4",
                    "type": "Button",
                    "id": "03ed11f3-8bec-4c40-bbd9-f095f2c54d40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test5",
                    "type": "Button",
                    "id": "96d59e6f-7918-4196-8a36-f3c11bfc2d11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TestClick",
                    "type": "Value",
                    "id": "ce03a7e5-86f4-43b8-a1c4-421ea1dd879d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "30fb653a-f297-4f69-a18e-088cd0dd1fd6",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d09cc2ec-e495-48d3-ad2b-99dfcee6de60",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "baa0215c-4520-441d-954b-b8324373b3d0",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93c3af3e-f400-4e6d-82cf-47ba02a96cc2",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05e51d6a-a305-4b2c-9851-5d7f7195826f",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "303d6395-ae48-4394-9f03-341cf79014ea",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyMouse",
            "bindingGroup": "KeyMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}